src/css/custom.css
/* stylelint-disable docusaurus/copyright-header */
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */

@import "modules/notes.css";

:root {
  --ifm-color-primary: #25c2a0;
  --ifm-color-primary-dark: rgb(33, 175, 144);
  --ifm-color-primary-darker: rgb(31, 165, 136);
  --ifm-color-primary-darkest: rgb(26, 136, 112);
  --ifm-color-primary-light: rgb(70, 203, 174);
  --ifm-color-primary-lighter: rgb(102, 212, 189);
  --ifm-color-primary-lightest: rgb(146, 224, 208);
  --ifm-code-font-size: 95%;
}

.docusaurus-highlight-code-line {
  background-color: rgb(72, 77, 91);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

table {
    width: 100%;
}

.markdown li > p {
    margin-top: 0px;
    margin-bottom: 0px;
}

.ph.cmd {
  font-family: revert;
  background-color: unset;
}

.pre {
  background-color: var(--ifm-pre-background);
  border-radius: var(--ifm-pre-border-radius);
  color: var(--ifm-pre-color);
  font: var(--ifm-code-font-size)/var(--ifm-pre-line-height) var(--ifm-font-family-monospace);
  margin: 0 0 var(--ifm-spacing-vertical);
  overflow: auto;
  padding: var(--ifm-pre-padding);
  word-wrap: normal;
  display: block;
  font-family: monospace;
  white-space: pre-wrap;
}

.ph:not(.b):not(.i):not(.u) {
    display: inline;
    background-color: var(--ifm-pre-background);
    border-radius: var(--ifm-pre-border-radius);
    color: var(--ifm-pre-color);
    font: var(--ifm-code-font-size)/var(--ifm-pre-line-height) var(--ifm-font-family-monospace);
    word-wrap: normal;
    font-family: monospace;
    white-space: pre-wrap;
}

.markdown {
    --ifm-h1-vertical-rhythm-top: 0; 
}

.anchor_top_offset::before {
    top: calc(var(--ifm-navbar-height) * -1);
    content: '';
    display: block;
    height: calc(var(--ifm-navbar-height));
    margin-top: calc(var(--ifm-navbar-height) * -1);
    visibility: hidden;
}

/* Wrap long lines of text in codeblocks */
code {
  white-space: pre-wrap;
}

